--- a/book/dataStructureAlgorithmVisualization/src/main/resources/static/dataStructure/common/css/header.css
+++ b/book/dataStructureAlgorithmVisualization/src/main/resources/static/dataStructure/common/css/header.css
@@ -11,9 +11,11 @@ button {
     cursor: pointer;
     border-radius: 5px;
     height: 30px;
-    width: 100px;
     font-weight: bold;
     font-size: 15px;
+    width: auto;
+    padding: 0 5px;
+    min-width: 100px;
 }
 
 button:hover{
