--- a/sgg/project/fund/front/src/components/left-menus/style.scss
+++ b/sgg/project/fund/front/src/components/left-menus/style.scss
@@ -2,7 +2,7 @@ $animation_time : 0.5s;
 
 .menuContainer {
   border-right: 1px solid #ccc;
-  font: 13px bold;
+  font-size: 13px;
   color: rgb(102,102,102);
 
   @keyframes iconOpen {
