--- a/sgg/project/fund/front/site/styles/index.scss
+++ b/sgg/project/fund/front/site/styles/index.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: "PingFang SC", Arial, "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
+  font-family: "PingFang SC", Arial,"微软雅黑", "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
   font-size: 14px;
   line-height: 1;
 }
